[gd_scene load_steps=3 format=3 uid="uid://bq3efybbe5o3y"]

[ext_resource type="Script" path="res://scripts/delegate_list_object.gd" id="1_xtd47"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_n5n25"]

[node name="delegate_list_object" type="TextEdit"]
custom_minimum_size = Vector2(300, 30)
layout_direction = 1
offset_right = 320.0
offset_bottom = 35.0
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.84
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_icons/tab = SubResource("CompressedTexture2D_n5n25")
editable = false
scroll_fit_content_height = true
caret_blink_interval = 0.57
script = ExtResource("1_xtd47")

[node name="WarnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 2.0
offset_right = 266.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 15
text = "âš "

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 2.0
offset_right = 236.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 15
text = ">"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 268.0
offset_top = 7.0
offset_right = 287.0
offset_bottom = 26.0

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 2.0
offset_right = 206.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 15
text = "<"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 4.0
offset_right = 179.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "0"

[node name="Nation" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 154.0
offset_bottom = 31.0
vertical_alignment = 1
text_overrun_behavior = 3
